src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    RUNE
    AND_XOR_ASSIGN
    QUICK_ASSIGN
    GOTO
    IMAGINARY
    COMMENT
    HEX
    RANGE
    FLOAT
    TYPE

Grammar

Rule 0     S' -> start
Rule 1     start -> SourceFile
Rule 2     empty -> <empty>
Rule 3     SourceFile -> PackageClause SEMICOLON ImportDeclRep TopLevelDeclRep
Rule 4     PackageClause -> PACKAGE PackageName
Rule 5     PackageName -> IDENTIFIER
Rule 6     ImportDeclRep -> empty
Rule 7     ImportDeclRep -> ImportDecl SEMICOLON ImportDeclRep
Rule 8     ImportDecl -> IMPORT STRING
Rule 9     ImportDecl -> IMPORT LPAREN STRING RPAREN
Rule 10    TopLevelDeclRep -> TopLevelDecl SEMICOLON TopLevelDeclRep
Rule 11    TopLevelDeclRep -> empty
Rule 12    TopLevelDecl -> Declaration
Rule 13    TopLevelDecl -> FunctionDecl
Rule 14    Declaration -> ConstDecl
Rule 15    Declaration -> VarDecl
Rule 16    ConstDecl -> CONST ConstSpec
Rule 17    ConstSpec -> IdentifierList
Rule 18    ConstSpec -> IdentifierList ASSIGN ExpressionList
Rule 19    ConstSpec -> IdentifierList Type ASSIGN ExpressionList
Rule 20    VarDecl -> VAR IdentifierList Type ASSIGN ExpressionList
Rule 21    VarDecl -> VAR IdentifierList Type
Rule 22    VarDecl -> VAR IdentifierList ASSIGN ExpressionList
Rule 23    Type -> TypeName
Rule 24    Type -> TypeLit
Rule 25    Type -> LPAREN Type RPAREN
Rule 26    TypeName -> IDENTIFIER
Rule 27    TypeLit -> ArrayType
Rule 28    TypeLit -> StructType
Rule 29    TypeLit -> PointerType
Rule 30    TypeLit -> FunctionType
Rule 31    ArrayType -> LSQUARE ArrayLength RSQUARE ElementType
Rule 32    ArrayLength -> INTEGER
Rule 33    ElementType -> Type
Rule 34    StructType -> STRUCT LCURL FieldDeclSemiColonRep RCURL
Rule 35    FieldDeclSemiColonRep -> FieldDecl SEMICOLON FieldDeclSemiColonRep
Rule 36    FieldDeclSemiColonRep -> empty
Rule 37    FieldDecl -> IdentifierList Type
Rule 38    PointerType -> STAR BaseType
Rule 39    BaseType -> Type
Rule 40    FunctionType -> FUNC Signature
Rule 41    Signature -> Parameters Result
Rule 42    Signature -> Parameters
Rule 43    Result -> LPAREN TypeList RPAREN
Rule 44    Parameters -> LPAREN ParamCommaOpt RPAREN
Rule 45    ParamCommaOpt -> ParameterList
Rule 46    ParamCommaOpt -> empty
Rule 47    ParameterList -> IdentifierList Type CommaParamDeclRep
Rule 48    CommaParamDeclRep -> COMMA IdentifierList Type CommaParamDeclRep
Rule 49    CommaParamDeclRep -> empty
Rule 50    CreateNewScope -> empty
Rule 51    DelScope -> empty
Rule 52    Block -> LCURL CreateNewScope StatementList DelScope RCURL
Rule 53    StatementList -> StSemiColonRep
Rule 54    StSemiColonRep -> Statement SEMICOLON StSemiColonRep
Rule 55    StSemiColonRep -> empty
Rule 56    IdentifierList -> IDENTIFIER CommaIdentRep
Rule 57    CommaIdentRep -> COMMA IDENTIFIER CommaIdentRep
Rule 58    CommaIdentRep -> SEMICOLON
Rule 59    ExpressionList -> Expression CommaExpRep
Rule 60    CommaExpRep -> COMMA Expression CommaExpRep
Rule 61    CommaExpRep -> empty
Rule 62    FunctionDecl -> FUNC FunctionName CreateNewScope Signature FunBodyOpt DelScope
Rule 63    FunBodyOpt -> FunctionBody
Rule 64    FunBodyOpt -> empty
Rule 65    FunctionName -> IDENTIFIER
Rule 66    FunctionBody -> Block
Rule 67    Operand -> Literal
Rule 68    Operand -> OperandName
Rule 69    Operand -> LPAREN Expression RPAREN
Rule 70    Literal -> BasicLit
Rule 71    BasicLit -> Int INTEGER
Rule 72    BasicLit -> Str STRING
Rule 73    Int -> empty
Rule 74    Str -> empty
Rule 75    OperandName -> IDENTIFIER
Rule 76    PrimaryExpr -> Operand
Rule 77    PrimaryExpr -> PrimaryExpr Selector
Rule 78    PrimaryExpr -> PrimaryExpr LSQUARE Expression RSQUARE
Rule 79    PrimaryExpr -> PrimaryExpr Arguments
Rule 80    Selector -> DOT IDENTIFIER
Rule 81    Arguments -> LPAREN ExpressionListTypeOpt RPAREN
Rule 82    ExpressionListTypeOpt -> ExpressionList
Rule 83    ExpressionListTypeOpt -> empty
Rule 84    Expression -> UnaryExpr
Rule 85    Expression -> Expression LOGICAL_OR Expression
Rule 86    Expression -> Expression LOGICAL_AND Expression
Rule 87    Expression -> Expression EQUALS Expression
Rule 88    Expression -> Expression NOT_ASSIGN Expression
Rule 89    Expression -> Expression LESSER Expression
Rule 90    Expression -> Expression GREATER Expression
Rule 91    Expression -> Expression LESS_EQUALS Expression
Rule 92    Expression -> Expression MORE_EQUALS Expression
Rule 93    Expression -> Expression OR Expression
Rule 94    Expression -> Expression XOR Expression
Rule 95    Expression -> Expression DIVIDE Expression
Rule 96    Expression -> Expression MOD Expression
Rule 97    Expression -> Expression LSHIFT Expression
Rule 98    Expression -> Expression RSHIFT Expression
Rule 99    Expression -> Expression PLUS Expression
Rule 100   Expression -> Expression MINUS Expression
Rule 101   Expression -> Expression STAR Expression
Rule 102   Expression -> Expression AND Expression
Rule 103   UnaryExpr -> PrimaryExpr
Rule 104   UnaryExpr -> UnaryOp UnaryExpr
Rule 105   UnaryExpr -> NOT UnaryExpr
Rule 106   UnaryOp -> PLUS
Rule 107   UnaryOp -> MINUS
Rule 108   UnaryOp -> STAR
Rule 109   UnaryOp -> AND
Rule 110   Statement -> Declaration
Rule 111   Statement -> SimpleStmt
Rule 112   Statement -> ReturnStmt
Rule 113   Statement -> BreakStmt
Rule 114   Statement -> ContinueStmt
Rule 115   Statement -> Block
Rule 116   Statement -> IfStmt
Rule 117   Statement -> SwitchStmt
Rule 118   Statement -> ForStmt
Rule 119   SimpleStmt -> empty SEMICOLON
Rule 120   SimpleStmt -> ExpressionStmt SEMICOLON
Rule 121   SimpleStmt -> IncDecStmt SEMICOLON
Rule 122   SimpleStmt -> Assignment SEMICOLON
Rule 123   ExpressionStmt -> Expression
Rule 124   IncDecStmt -> IDENTIFIER INCR
Rule 125   IncDecStmt -> IDENTIFIER DECR
Rule 126   Assignment -> ExpressionList AssignOp ExpressionList
Rule 127   AssignOp -> PLUS_ASSIGN
Rule 128   AssignOp -> MINUS_ASSIGN
Rule 129   AssignOp -> STAR_ASSIGN
Rule 130   AssignOp -> DIVIDE_ASSIGN
Rule 131   AssignOp -> MOD_ASSIGN
Rule 132   AssignOp -> AND_ASSIGN
Rule 133   AssignOp -> OR_ASSIGN
Rule 134   AssignOp -> XOR_ASSIGN
Rule 135   AssignOp -> LSHIFT_ASSIGN
Rule 136   AssignOp -> RSHIFT_ASSIGN
Rule 137   AssignOp -> ASSIGN
Rule 138   IfStmt -> IF Expression Block ElseOpt
Rule 139   ElseOpt -> ELSE IfStmt
Rule 140   ElseOpt -> ELSE Block
Rule 141   ElseOpt -> empty
Rule 142   SwitchStmt -> CreateNewScope ExprSwitchStmt DelScope
Rule 143   ExprSwitchStmt -> SWITCH Expression LCURL ExprCaseClauseRep RCURL
Rule 144   ExprCaseClauseRep -> ExprCaseClause ExprCaseClauseRep
Rule 145   ExprCaseClauseRep -> empty
Rule 146   ExprCaseClause -> ExprSwitchCase COLON StatementList
Rule 147   ExprSwitchCase -> CASE BasicLit
Rule 148   ExprSwitchCase -> DEFAULT
Rule 149   TypeList -> Type TypeRep
Rule 150   TypeRep -> COMMA Type TypeRep
Rule 151   TypeRep -> empty
Rule 152   ForStmt -> CreateNewScope FOR ForClause Block DelScope
Rule 153   ForClause -> SimpleStmt ConditionOpt SEMICOLON SimpleStmt
Rule 154   ConditionOpt -> empty
Rule 155   ConditionOpt -> Condition
Rule 156   Condition -> Expression
Rule 157   ReturnStmt -> RETURN ExpressionListPureOpt
Rule 158   ExpressionListPureOpt -> ExpressionList
Rule 159   ExpressionListPureOpt -> empty
Rule 160   BreakStmt -> BREAK
Rule 161   ContinueStmt -> CONTINUE

Terminals, with rules where they appear

AND                  : 102 109
AND_ASSIGN           : 132
AND_XOR_ASSIGN       : 
ASSIGN               : 18 19 20 22 137
BREAK                : 160
CASE                 : 147
COLON                : 146
COMMA                : 48 57 60 150
COMMENT              : 
CONST                : 16
CONTINUE             : 161
DECR                 : 125
DEFAULT              : 148
DIVIDE               : 95
DIVIDE_ASSIGN        : 130
DOT                  : 80
ELSE                 : 139 140
EQUALS               : 87
FLOAT                : 
FOR                  : 152
FUNC                 : 40 62
GOTO                 : 
GREATER              : 90
HEX                  : 
IDENTIFIER           : 5 26 56 57 65 75 80 124 125
IF                   : 138
IMAGINARY            : 
IMPORT               : 8 9
INCR                 : 124
INTEGER              : 32 71
LCURL                : 34 52 143
LESSER               : 89
LESS_EQUALS          : 91
LOGICAL_AND          : 86
LOGICAL_OR           : 85
LPAREN               : 9 25 43 44 69 81
LSHIFT               : 97
LSHIFT_ASSIGN        : 135
LSQUARE              : 31 78
MINUS                : 100 107
MINUS_ASSIGN         : 128
MOD                  : 96
MOD_ASSIGN           : 131
MORE_EQUALS          : 92
NOT                  : 105
NOT_ASSIGN           : 88
OR                   : 93
OR_ASSIGN            : 133
PACKAGE              : 4
PLUS                 : 99 106
PLUS_ASSIGN          : 127
QUICK_ASSIGN         : 
RANGE                : 
RCURL                : 34 52 143
RETURN               : 157
RPAREN               : 9 25 43 44 69 81
RSHIFT               : 98
RSHIFT_ASSIGN        : 136
RSQUARE              : 31 78
RUNE                 : 
SEMICOLON            : 3 7 10 35 54 58 119 120 121 122 153
STAR                 : 38 101 108
STAR_ASSIGN          : 129
STRING               : 8 9 72
STRUCT               : 34
SWITCH               : 143
TYPE                 : 
VAR                  : 20 21 22
XOR                  : 94
XOR_ASSIGN           : 134
error                : 

Nonterminals, with rules where they appear

Arguments            : 79
ArrayLength          : 31
ArrayType            : 27
AssignOp             : 126
Assignment           : 122
BaseType             : 38
BasicLit             : 70 147
Block                : 66 115 138 140 152
BreakStmt            : 113
CommaExpRep          : 59 60
CommaIdentRep        : 56 57
CommaParamDeclRep    : 47 48
Condition            : 155
ConditionOpt         : 153
ConstDecl            : 14
ConstSpec            : 16
ContinueStmt         : 114
CreateNewScope       : 52 62 142 152
Declaration          : 12 110
DelScope             : 52 62 142 152
ElementType          : 31
ElseOpt              : 138
ExprCaseClause       : 144
ExprCaseClauseRep    : 143 144
ExprSwitchCase       : 146
ExprSwitchStmt       : 142
Expression           : 59 60 69 78 85 85 86 86 87 87 88 88 89 89 90 90 91 91 92 92 93 93 94 94 95 95 96 96 97 97 98 98 99 99 100 100 101 101 102 102 123 138 143 156
ExpressionList       : 18 19 20 22 82 126 126 158
ExpressionListPureOpt : 157
ExpressionListTypeOpt : 81
ExpressionStmt       : 120
FieldDecl            : 35
FieldDeclSemiColonRep : 34 35
ForClause            : 152
ForStmt              : 118
FunBodyOpt           : 62
FunctionBody         : 63
FunctionDecl         : 13
FunctionName         : 62
FunctionType         : 30
IdentifierList       : 17 18 19 20 21 22 37 47 48
IfStmt               : 116 139
ImportDecl           : 7
ImportDeclRep        : 3 7
IncDecStmt           : 121
Int                  : 71
Literal              : 67
Operand              : 76
OperandName          : 68
PackageClause        : 3
PackageName          : 4
ParamCommaOpt        : 44
ParameterList        : 45
Parameters           : 41 42
PointerType          : 29
PrimaryExpr          : 77 78 79 103
Result               : 41
ReturnStmt           : 112
Selector             : 77
Signature            : 40 62
SimpleStmt           : 111 153 153
SourceFile           : 1
StSemiColonRep       : 53 54
Statement            : 54
StatementList        : 52 146
Str                  : 72
StructType           : 28
SwitchStmt           : 117
TopLevelDecl         : 10
TopLevelDeclRep      : 3 10
Type                 : 19 20 21 25 33 37 39 47 48 149 150
TypeList             : 43
TypeLit              : 24
TypeName             : 23
TypeRep              : 149 150
UnaryExpr            : 84 104 105
UnaryOp              : 104
VarDecl              : 15
empty                : 6 11 36 46 49 50 51 55 61 64 73 74 83 119 141 145 151 154 159
start                : 0

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . SourceFile
    (3) SourceFile -> . PackageClause SEMICOLON ImportDeclRep TopLevelDeclRep
    (4) PackageClause -> . PACKAGE PackageName

    PACKAGE         shift and go to state 2

    PackageClause                  shift and go to state 1
    SourceFile                     shift and go to state 3
    start                          shift and go to state 4

state 1

    (3) SourceFile -> PackageClause . SEMICOLON ImportDeclRep TopLevelDeclRep

    SEMICOLON       shift and go to state 5


state 2

    (4) PackageClause -> PACKAGE . PackageName
    (5) PackageName -> . IDENTIFIER

    IDENTIFIER      shift and go to state 7

    PackageName                    shift and go to state 6

state 3

    (1) start -> SourceFile .

    $end            reduce using rule 1 (start -> SourceFile .)


state 4

    (0) S' -> start .



state 5

    (3) SourceFile -> PackageClause SEMICOLON . ImportDeclRep TopLevelDeclRep
    (6) ImportDeclRep -> . empty
    (7) ImportDeclRep -> . ImportDecl SEMICOLON ImportDeclRep
    (2) empty -> .
    (8) ImportDecl -> . IMPORT STRING
    (9) ImportDecl -> . IMPORT LPAREN STRING RPAREN

    FUNC            reduce using rule 2 (empty -> .)
    CONST           reduce using rule 2 (empty -> .)
    VAR             reduce using rule 2 (empty -> .)
    $end            reduce using rule 2 (empty -> .)
    IMPORT          shift and go to state 9

    ImportDeclRep                  shift and go to state 10
    empty                          shift and go to state 11
    ImportDecl                     shift and go to state 8

state 6

    (4) PackageClause -> PACKAGE PackageName .

    SEMICOLON       reduce using rule 4 (PackageClause -> PACKAGE PackageName .)


state 7

    (5) PackageName -> IDENTIFIER .

    SEMICOLON       reduce using rule 5 (PackageName -> IDENTIFIER .)


state 8

    (7) ImportDeclRep -> ImportDecl . SEMICOLON ImportDeclRep

    SEMICOLON       shift and go to state 12


state 9

    (8) ImportDecl -> IMPORT . STRING
    (9) ImportDecl -> IMPORT . LPAREN STRING RPAREN

    STRING          shift and go to state 13
    LPAREN          shift and go to state 14


state 10

    (3) SourceFile -> PackageClause SEMICOLON ImportDeclRep . TopLevelDeclRep
    (10) TopLevelDeclRep -> . TopLevelDecl SEMICOLON TopLevelDeclRep
    (11) TopLevelDeclRep -> . empty
    (12) TopLevelDecl -> . Declaration
    (13) TopLevelDecl -> . FunctionDecl
    (2) empty -> .
    (14) Declaration -> . ConstDecl
    (15) Declaration -> . VarDecl
    (62) FunctionDecl -> . FUNC FunctionName CreateNewScope Signature FunBodyOpt DelScope
    (16) ConstDecl -> . CONST ConstSpec
    (20) VarDecl -> . VAR IdentifierList Type ASSIGN ExpressionList
    (21) VarDecl -> . VAR IdentifierList Type
    (22) VarDecl -> . VAR IdentifierList ASSIGN ExpressionList

    $end            reduce using rule 2 (empty -> .)
    FUNC            shift and go to state 21
    CONST           shift and go to state 15
    VAR             shift and go to state 22

    TopLevelDeclRep                shift and go to state 20
    VarDecl                        shift and go to state 23
    FunctionDecl                   shift and go to state 16
    TopLevelDecl                   shift and go to state 17
    Declaration                    shift and go to state 18
    ConstDecl                      shift and go to state 24
    empty                          shift and go to state 19

state 11

    (6) ImportDeclRep -> empty .

    FUNC            reduce using rule 6 (ImportDeclRep -> empty .)
    CONST           reduce using rule 6 (ImportDeclRep -> empty .)
    VAR             reduce using rule 6 (ImportDeclRep -> empty .)
    $end            reduce using rule 6 (ImportDeclRep -> empty .)


state 12

    (7) ImportDeclRep -> ImportDecl SEMICOLON . ImportDeclRep
    (6) ImportDeclRep -> . empty
    (7) ImportDeclRep -> . ImportDecl SEMICOLON ImportDeclRep
    (2) empty -> .
    (8) ImportDecl -> . IMPORT STRING
    (9) ImportDecl -> . IMPORT LPAREN STRING RPAREN

    FUNC            reduce using rule 2 (empty -> .)
    CONST           reduce using rule 2 (empty -> .)
    VAR             reduce using rule 2 (empty -> .)
    $end            reduce using rule 2 (empty -> .)
    IMPORT          shift and go to state 9

    ImportDecl                     shift and go to state 8
    empty                          shift and go to state 11
    ImportDeclRep                  shift and go to state 25

state 13

    (8) ImportDecl -> IMPORT STRING .

    SEMICOLON       reduce using rule 8 (ImportDecl -> IMPORT STRING .)


state 14

    (9) ImportDecl -> IMPORT LPAREN . STRING RPAREN

    STRING          shift and go to state 26


state 15

    (16) ConstDecl -> CONST . ConstSpec
    (17) ConstSpec -> . IdentifierList
    (18) ConstSpec -> . IdentifierList ASSIGN ExpressionList
    (19) ConstSpec -> . IdentifierList Type ASSIGN ExpressionList
    (56) IdentifierList -> . IDENTIFIER CommaIdentRep

    IDENTIFIER      shift and go to state 29

    ConstSpec                      shift and go to state 27
    IdentifierList                 shift and go to state 28

state 16

    (13) TopLevelDecl -> FunctionDecl .

    SEMICOLON       reduce using rule 13 (TopLevelDecl -> FunctionDecl .)


state 17

    (10) TopLevelDeclRep -> TopLevelDecl . SEMICOLON TopLevelDeclRep

    SEMICOLON       shift and go to state 30


state 18

    (12) TopLevelDecl -> Declaration .

    SEMICOLON       reduce using rule 12 (TopLevelDecl -> Declaration .)


state 19

    (11) TopLevelDeclRep -> empty .

    $end            reduce using rule 11 (TopLevelDeclRep -> empty .)


state 20

    (3) SourceFile -> PackageClause SEMICOLON ImportDeclRep TopLevelDeclRep .

    $end            reduce using rule 3 (SourceFile -> PackageClause SEMICOLON ImportDeclRep TopLevelDeclRep .)


state 21

    (62) FunctionDecl -> FUNC . FunctionName CreateNewScope Signature FunBodyOpt DelScope
    (65) FunctionName -> . IDENTIFIER

    IDENTIFIER      shift and go to state 32

    FunctionName                   shift and go to state 31

state 22

    (20) VarDecl -> VAR . IdentifierList Type ASSIGN ExpressionList
    (21) VarDecl -> VAR . IdentifierList Type
    (22) VarDecl -> VAR . IdentifierList ASSIGN ExpressionList
    (56) IdentifierList -> . IDENTIFIER CommaIdentRep

    IDENTIFIER      shift and go to state 29

    IdentifierList                 shift and go to state 33

state 23

    (15) Declaration -> VarDecl .

    SEMICOLON       reduce using rule 15 (Declaration -> VarDecl .)


state 24

    (14) Declaration -> ConstDecl .

    SEMICOLON       reduce using rule 14 (Declaration -> ConstDecl .)


state 25

    (7) ImportDeclRep -> ImportDecl SEMICOLON ImportDeclRep .

    FUNC            reduce using rule 7 (ImportDeclRep -> ImportDecl SEMICOLON ImportDeclRep .)
    CONST           reduce using rule 7 (ImportDeclRep -> ImportDecl SEMICOLON ImportDeclRep .)
    VAR             reduce using rule 7 (ImportDeclRep -> ImportDecl SEMICOLON ImportDeclRep .)
    $end            reduce using rule 7 (ImportDeclRep -> ImportDecl SEMICOLON ImportDeclRep .)


state 26

    (9) ImportDecl -> IMPORT LPAREN STRING . RPAREN

    RPAREN          shift and go to state 34


state 27

    (16) ConstDecl -> CONST ConstSpec .

    SEMICOLON       reduce using rule 16 (ConstDecl -> CONST ConstSpec .)


state 28

    (17) ConstSpec -> IdentifierList .
    (18) ConstSpec -> IdentifierList . ASSIGN ExpressionList
    (19) ConstSpec -> IdentifierList . Type ASSIGN ExpressionList
    (23) Type -> . TypeName
    (24) Type -> . TypeLit
    (25) Type -> . LPAREN Type RPAREN
    (26) TypeName -> . IDENTIFIER
    (27) TypeLit -> . ArrayType
    (28) TypeLit -> . StructType
    (29) TypeLit -> . PointerType
    (30) TypeLit -> . FunctionType
    (31) ArrayType -> . LSQUARE ArrayLength RSQUARE ElementType
    (34) StructType -> . STRUCT LCURL FieldDeclSemiColonRep RCURL
    (38) PointerType -> . STAR BaseType
    (40) FunctionType -> . FUNC Signature

    SEMICOLON       reduce using rule 17 (ConstSpec -> IdentifierList .)
    ASSIGN          shift and go to state 43
    LPAREN          shift and go to state 37
    IDENTIFIER      shift and go to state 42
    LSQUARE         shift and go to state 45
    STRUCT          shift and go to state 46
    STAR            shift and go to state 36
    FUNC            shift and go to state 35

    StructType                     shift and go to state 44
    TypeLit                        shift and go to state 39
    ArrayType                      shift and go to state 38
    TypeName                       shift and go to state 41
    PointerType                    shift and go to state 47
    FunctionType                   shift and go to state 48
    Type                           shift and go to state 40

state 29

    (56) IdentifierList -> IDENTIFIER . CommaIdentRep
    (57) CommaIdentRep -> . COMMA IDENTIFIER CommaIdentRep
    (58) CommaIdentRep -> . SEMICOLON

    COMMA           shift and go to state 49
    SEMICOLON       shift and go to state 50

    CommaIdentRep                  shift and go to state 51

state 30

    (10) TopLevelDeclRep -> TopLevelDecl SEMICOLON . TopLevelDeclRep
    (10) TopLevelDeclRep -> . TopLevelDecl SEMICOLON TopLevelDeclRep
    (11) TopLevelDeclRep -> . empty
    (12) TopLevelDecl -> . Declaration
    (13) TopLevelDecl -> . FunctionDecl
    (2) empty -> .
    (14) Declaration -> . ConstDecl
    (15) Declaration -> . VarDecl
    (62) FunctionDecl -> . FUNC FunctionName CreateNewScope Signature FunBodyOpt DelScope
    (16) ConstDecl -> . CONST ConstSpec
    (20) VarDecl -> . VAR IdentifierList Type ASSIGN ExpressionList
    (21) VarDecl -> . VAR IdentifierList Type
    (22) VarDecl -> . VAR IdentifierList ASSIGN ExpressionList

    $end            reduce using rule 2 (empty -> .)
    FUNC            shift and go to state 21
    CONST           shift and go to state 15
    VAR             shift and go to state 22

    TopLevelDeclRep                shift and go to state 52
    VarDecl                        shift and go to state 23
    FunctionDecl                   shift and go to state 16
    TopLevelDecl                   shift and go to state 17
    Declaration                    shift and go to state 18
    ConstDecl                      shift and go to state 24
    empty                          shift and go to state 19

state 31

    (62) FunctionDecl -> FUNC FunctionName . CreateNewScope Signature FunBodyOpt DelScope
    (50) CreateNewScope -> . empty
    (2) empty -> .

    LPAREN          reduce using rule 2 (empty -> .)

    CreateNewScope                 shift and go to state 53
    empty                          shift and go to state 54

state 32

    (65) FunctionName -> IDENTIFIER .

    LPAREN          reduce using rule 65 (FunctionName -> IDENTIFIER .)


state 33

    (20) VarDecl -> VAR IdentifierList . Type ASSIGN ExpressionList
    (21) VarDecl -> VAR IdentifierList . Type
    (22) VarDecl -> VAR IdentifierList . ASSIGN ExpressionList
    (23) Type -> . TypeName
    (24) Type -> . TypeLit
    (25) Type -> . LPAREN Type RPAREN
    (26) TypeName -> . IDENTIFIER
    (27) TypeLit -> . ArrayType
    (28) TypeLit -> . StructType
    (29) TypeLit -> . PointerType
    (30) TypeLit -> . FunctionType
    (31) ArrayType -> . LSQUARE ArrayLength RSQUARE ElementType
    (34) StructType -> . STRUCT LCURL FieldDeclSemiColonRep RCURL
    (38) PointerType -> . STAR BaseType
    (40) FunctionType -> . FUNC Signature

    ASSIGN          shift and go to state 56
    LPAREN          shift and go to state 37
    IDENTIFIER      shift and go to state 42
    LSQUARE         shift and go to state 45
    STRUCT          shift and go to state 46
    STAR            shift and go to state 36
    FUNC            shift and go to state 35

    StructType                     shift and go to state 44
    Type                           shift and go to state 55
    ArrayType                      shift and go to state 38
    TypeName                       shift and go to state 41
    PointerType                    shift and go to state 47
    FunctionType                   shift and go to state 48
    TypeLit                        shift and go to state 39

state 34

    (9) ImportDecl -> IMPORT LPAREN STRING RPAREN .

    SEMICOLON       reduce using rule 9 (ImportDecl -> IMPORT LPAREN STRING RPAREN .)


state 35

    (40) FunctionType -> FUNC . Signature
    (41) Signature -> . Parameters Result
    (42) Signature -> . Parameters
    (44) Parameters -> . LPAREN ParamCommaOpt RPAREN

    LPAREN          shift and go to state 58

    Parameters                     shift and go to state 57
    Signature                      shift and go to state 59

state 36

    (38) PointerType -> STAR . BaseType
    (39) BaseType -> . Type
    (23) Type -> . TypeName
    (24) Type -> . TypeLit
    (25) Type -> . LPAREN Type RPAREN
    (26) TypeName -> . IDENTIFIER
    (27) TypeLit -> . ArrayType
    (28) TypeLit -> . StructType
    (29) TypeLit -> . PointerType
    (30) TypeLit -> . FunctionType
    (31) ArrayType -> . LSQUARE ArrayLength RSQUARE ElementType
    (34) StructType -> . STRUCT LCURL FieldDeclSemiColonRep RCURL
    (38) PointerType -> . STAR BaseType
    (40) FunctionType -> . FUNC Signature

    LPAREN          shift and go to state 37
    IDENTIFIER      shift and go to state 42
    LSQUARE         shift and go to state 45
    STRUCT          shift and go to state 46
    STAR            shift and go to state 36
    FUNC            shift and go to state 35

    StructType                     shift and go to state 44
    BaseType                       shift and go to state 61
    Type                           shift and go to state 60
    ArrayType                      shift and go to state 38
    TypeName                       shift and go to state 41
    PointerType                    shift and go to state 47
    FunctionType                   shift and go to state 48
    TypeLit                        shift and go to state 39

state 37

    (25) Type -> LPAREN . Type RPAREN
    (23) Type -> . TypeName
    (24) Type -> . TypeLit
    (25) Type -> . LPAREN Type RPAREN
    (26) TypeName -> . IDENTIFIER
    (27) TypeLit -> . ArrayType
    (28) TypeLit -> . StructType
    (29) TypeLit -> . PointerType
    (30) TypeLit -> . FunctionType
    (31) ArrayType -> . LSQUARE ArrayLength RSQUARE ElementType
    (34) StructType -> . STRUCT LCURL FieldDeclSemiColonRep RCURL
    (38) PointerType -> . STAR BaseType
    (40) FunctionType -> . FUNC Signature

    LPAREN          shift and go to state 37
    IDENTIFIER      shift and go to state 42
    LSQUARE         shift and go to state 45
    STRUCT          shift and go to state 46
    STAR            shift and go to state 36
    FUNC            shift and go to state 35

    StructType                     shift and go to state 44
    Type                           shift and go to state 62
    ArrayType                      shift and go to state 38
    TypeName                       shift and go to state 41
    PointerType                    shift and go to state 47
    FunctionType                   shift and go to state 48
    TypeLit                        shift and go to state 39

state 38

    (27) TypeLit -> ArrayType .

    COMMA           reduce using rule 27 (TypeLit -> ArrayType .)
    RPAREN          reduce using rule 27 (TypeLit -> ArrayType .)
    ASSIGN          reduce using rule 27 (TypeLit -> ArrayType .)
    SEMICOLON       reduce using rule 27 (TypeLit -> ArrayType .)


state 39

    (24) Type -> TypeLit .

    ASSIGN          reduce using rule 24 (Type -> TypeLit .)
    SEMICOLON       reduce using rule 24 (Type -> TypeLit .)
    RPAREN          reduce using rule 24 (Type -> TypeLit .)
    COMMA           reduce using rule 24 (Type -> TypeLit .)


state 40

    (19) ConstSpec -> IdentifierList Type . ASSIGN ExpressionList

    ASSIGN          shift and go to state 63


state 41

    (23) Type -> TypeName .

    ASSIGN          reduce using rule 23 (Type -> TypeName .)
    SEMICOLON       reduce using rule 23 (Type -> TypeName .)
    RPAREN          reduce using rule 23 (Type -> TypeName .)
    COMMA           reduce using rule 23 (Type -> TypeName .)


state 42

    (26) TypeName -> IDENTIFIER .

    SEMICOLON       reduce using rule 26 (TypeName -> IDENTIFIER .)
    ASSIGN          reduce using rule 26 (TypeName -> IDENTIFIER .)
    RPAREN          reduce using rule 26 (TypeName -> IDENTIFIER .)
    COMMA           reduce using rule 26 (TypeName -> IDENTIFIER .)


state 43

    (18) ConstSpec -> IdentifierList ASSIGN . ExpressionList
    (59) ExpressionList -> . Expression CommaExpRep
    (84) Expression -> . UnaryExpr
    (85) Expression -> . Expression LOGICAL_OR Expression
    (86) Expression -> . Expression LOGICAL_AND Expression
    (87) Expression -> . Expression EQUALS Expression
    (88) Expression -> . Expression NOT_ASSIGN Expression
    (89) Expression -> . Expression LESSER Expression
    (90) Expression -> . Expression GREATER Expression
    (91) Expression -> . Expression LESS_EQUALS Expression
    (92) Expression -> . Expression MORE_EQUALS Expression
    (93) Expression -> . Expression OR Expression
    (94) Expression -> . Expression XOR Expression
    (95) Expression -> . Expression DIVIDE Expression
    (96) Expression -> . Expression MOD Expression
    (97) Expression -> . Expression LSHIFT Expression
    (98) Expression -> . Expression RSHIFT Expression
    (99) Expression -> . Expression PLUS Expression
    (100) Expression -> . Expression MINUS Expression
    (101) Expression -> . Expression STAR Expression
    (102) Expression -> . Expression AND Expression
    (103) UnaryExpr -> . PrimaryExpr
    (104) UnaryExpr -> . UnaryOp UnaryExpr
    (105) UnaryExpr -> . NOT UnaryExpr
    (76) PrimaryExpr -> . Operand
    (77) PrimaryExpr -> . PrimaryExpr Selector
    (78) PrimaryExpr -> . PrimaryExpr LSQUARE Expression RSQUARE
    (79) PrimaryExpr -> . PrimaryExpr Arguments
    (106) UnaryOp -> . PLUS
    (107) UnaryOp -> . MINUS
    (108) UnaryOp -> . STAR
    (109) UnaryOp -> . AND
    (67) Operand -> . Literal
    (68) Operand -> . OperandName
    (69) Operand -> . LPAREN Expression RPAREN
    (70) Literal -> . BasicLit
    (75) OperandName -> . IDENTIFIER
    (71) BasicLit -> . Int INTEGER
    (72) BasicLit -> . Str STRING
    (73) Int -> . empty
    (74) Str -> . empty
    (2) empty -> .

    NOT             shift and go to state 74
    PLUS            shift and go to state 71
    MINUS           shift and go to state 67
    STAR            shift and go to state 66
    AND             shift and go to state 79
    LPAREN          shift and go to state 77
    IDENTIFIER      shift and go to state 80
    INTEGER         reduce using rule 2 (empty -> .)
    STRING          reduce using rule 2 (empty -> .)

    OperandName                    shift and go to state 68
    UnaryOp                        shift and go to state 64
    Int                            shift and go to state 81
    BasicLit                       shift and go to state 70
    UnaryExpr                      shift and go to state 73
    Operand                        shift and go to state 76
    Literal                        shift and go to state 65
    ExpressionList                 shift and go to state 75
    Str                            shift and go to state 69
    PrimaryExpr                    shift and go to state 82
    Expression                     shift and go to state 78
    empty                          shift and go to state 72

state 44

    (28) TypeLit -> StructType .

    COMMA           reduce using rule 28 (TypeLit -> StructType .)
    RPAREN          reduce using rule 28 (TypeLit -> StructType .)
    ASSIGN          reduce using rule 28 (TypeLit -> StructType .)
    SEMICOLON       reduce using rule 28 (TypeLit -> StructType .)


state 45

    (31) ArrayType -> LSQUARE . ArrayLength RSQUARE ElementType
    (32) ArrayLength -> . INTEGER

    INTEGER         shift and go to state 83

    ArrayLength                    shift and go to state 84

state 46

    (34) StructType -> STRUCT . LCURL FieldDeclSemiColonRep RCURL

    LCURL           shift and go to state 85


state 47

    (29) TypeLit -> PointerType .
